# quasi88

./: .clang-format  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE.txt  Makefile  README.cmake.md  README.md  vcpkg.json
.github/workflows/: main.yml  package.yml
cmake/: FindReadline.cmake
document/: HISTORY.TXT  MANUAL.TXT  QUICK-START.EN.TXT  RAQUASI88.EN.TXT  RAQUASI88.TXT
license/: FMGEN.TXT
src/: basic.c  basic.cpp  basic.h  byteswap.h  crtcdmac.c  crtcdmac.cpp  crtcdmac.h  debug.c  debug.h  drive.h  emu.c  emu.cpp  emu.h  event.c  event.cpp  event.h  fdc.c  fdc.cpp  fdc.h  file-op.cpp  file-op.h  filename.h  fname.c  fname.cpp  fname.h  font.h  getconf.c  getconf.cpp  getconf.h  graph.h  help.h  image.c  image.cpp  image.h  initval.h  intr.c  intr.cpp  intr.h  keyboard.c  keyboard.cpp  (+95 more)
src/Core/: Exception.h  Log.h  Quasi88App.cpp  Quasi88App.h
src/FUNIX/: file-op.c
src/FWIN/: file-op.c
src/GTK/: config.h  device.h  event.c  graph.c  main.c  main.h  menubar.c  wait.c
src/MINI/: graph.c
src/SDL/: Quasi88SDLApp.cpp  Quasi88SDLApp.h  config.h  device.h  event.c  event.cpp  graph.c  graph.cpp  keymap.cpp  keymap.h  main.c  main.cpp  wait.c  wait.cpp
src/WIN32/: Quasi88WinApp.h  audio.cpp  config.h  device.h  event.c  event.cpp  graph.cpp  main.cpp  menubar.c  menubar.cpp  quasi88.rc  resource.h  retroachievements.cpp  retroachievements.h  wait.cpp
src/X11/: event.c  graph-x11dga.c  graph-xv.c  graph.c  joy-sdl.c  main.c  wait.c
src/fmgen/: opna.cpp  psg.cpp  types.h
src/snddrv/: 00README.TXT
src/snddrv/quasi88/: 2203fmgen.cpp  2203fmgen.h  2608fmgen.cpp  2608fmgen.h  beep.c  beep.h  beepintf.c  beepintf.h  machine.c  mame-quasi88.c  mame-quasi88.cpp  mame-quasi88.h
src/snddrv/quasi88/SDL/: audio.cpp  audio.h  sdl.c  sdl.cpp
src/snddrv/src/: sndintrf.c  sound.c  streams.c
src/snddrv/src/sound/: 2203intf.h  2608intf.c  2608intf.h  samples.h
src/snddrv/src/unix/sysdep/dsp-drivers/: sdl.c
tests/: CMakeLists.txt  endianess.cpp
visualc/: QUASI88_win32.vcxproj
